--- a/views/admin/pages/dieu-tra-list.pug
+++ b/views/admin/pages/dieu-tra-list.pug
@@ -1,5 +1,7 @@
 extends ../layouts/default.pug
-
+include ../mixins/optionTinh.pug
+include ../mixins/optionHuyen.pug
+include ../mixins/optionXa.pug
 block main
   h1.box-title Danh sách điều tra
 
@@ -8,48 +10,49 @@ block main
     .inner-wrap
       .inner-item.inner-label
         <i class="fa-solid fa-filter"></i> Bộ lọc
-      .inner-item
-        select(filter-status)
-          option(value="") Huyện
-          option(value="active") Hoạt động
-          option(value="inactive") Tạm dừng
-      
-      .inner-item
-        select(filter-role)
-          option(value="") Xã
-          option(value="1") Nhóm quyền 1
-          option(value="2") Nhóm quyền 2
-          option(value="3") Nhóm quyền 3
-          
+        .inner-group
+          select(id="tinh" name="tinh" class="tinh" required filter-Ma_tinh)
+            option(value="") Tỉnh
+            +optionTinh(ListTinh)
+        .inner-group
+          select(id="huyen" name="huyen" class="huyen" filter-Ma_huyen)
+            option(value="") Huyện
+            +optionHuyen(ListHuyen)
+        .inner-group
+          select(id="xa" name="xa" class="xa" filter-Ma_xa)
+            option(value="") Xã
+            +optionXa(ListXaTheoHuyen)  
+      .inner-item.inner-date
+        input(type="date" filter-start-date value="2025-09-01")
+        span - 
+        input(type="date" filter-end-date value="2025-09-22")        
       .inner-item.inner-reset(filter-reset)
         <i class="fa-solid fa-rotate-left"></i> Xóa bộ lọc
 
   //- Section 5: Hành động & tìm kiếm
   .section-5
     .inner-wrap
-      .inner-change-status(change-multi data-api=`/${pathAdmin}/user/change-multi`)
+      .inner-change-status(change-multi data-api=`/${pathAdmin}/dieutra/change-multi`)
         .inner-item
           select
             option(value="") -- Hành động --
-            option(value="active") Hoạt động
+            option(value="") Hoạt động
             option(value="inactive") Dừng hoạt động
             option(value="delete") Xóa
         .inner-item
           button Áp dụng
-      .inner-search
-        i(class="fa-solid fa-magnifying-glass")
-        input(type="text" placeholder="Tìm kiếm" search)
+      //- .inner-search
+      //-   i(class="fa-solid fa-magnifying-glass")
+      //-   input(type="text" placeholder="Tìm kiếm" search)
       .inner-button-create
-          a(href=`/${pathAdmin}/dieutra/${matinh}/create`) + Tạo mới
+          a(href=`/${pathAdmin}/dieutra/create`) + Tạo mới
 
-  //- Section 6: Bảng danh sách
+  //- //- Section 6: Bảng danh sách
   .section-6
     .table-2
       table
         thead
           tr
-            th.inner-center
-              input(type="checkbox" class="inner-check" check-all)
             th.inner-center Địa chỉ
             th.inner-center Tỉnh
             th.inner-center Huyện
@@ -58,28 +61,32 @@ block main
             th Số cây
             th Loại cây
             th Đường kính TB
+            th Tiểu khu 
+            th Khoảnh 
+            th Lô
             th Ngày điều tra
             th Hành động
         tbody
         if dieutraList.length 
           each item in dieutraList
             tr
-              td.inner-center
-                input(type="checkbox" class="inner-check" value=item.id)
-              td.inner-center= item.dia_chi_cu_the || ""
-              td.inner-center= item.ten_tinh
-              td.inner-center= item.ten_huyen
-              td.inner-center= item.ten_xa
-              td= item.so_sau_non
-              td= item.so_cay
+              td.inner-center= item.dia_chi_cu_the || "Không xác định"
+              td.inner-center= item.ten_tinh || "Không xác định"
+              td.inner-center= item.ten_huyen || "Không xác định"
+              td.inner-center= item.ten_xa || "Không xác định"
+              td= item.so_sau_non || ""
+              td= item.so_cay || ""
               td= item.loai_cay === "thongmavi" ? "Thông Mã Vĩ" : item.loai_cay === "thongnhua" ? "Thông Nhựa" : ""
               td= item.duong_kinh_tb || ""
-              td= item.createdAtFormat
+              td=item.tk || ""
+              td=item.khoanh || ""
+              td=item.lo || ""
+              td= item.dtra_dateFormat || ""
               td
                 .inner-buttons
-                  a.inner-edit(href=`/${pathAdmin}/dieutra/${matinh}/edit/${item.id}`)
+                  a.inner-edit(href=`/${pathAdmin}/dieutra/edit/${item.id}`)
                     i(class="fa-regular fa-pen-to-square")
-                  button.inner-delete(button-delete-patch data-api=`/${pathAdmin}/dieutra/${matinh}/delete/${item.id}`)
+                  button.inner-delete(button-delete-patch data-api=`/${pathAdmin}/dieutra/delete/${item.id}`)
                     i(class="fa-regular fa-trash-can")
         else
           tr
@@ -87,7 +94,13 @@ block main
 
   //- Section 7: Pagination
   .section-7
-    span.inner-label Hiển thị 1 - 3 của 3
-    select.inner-pagination(name="page")
-      option(value="1" selected) Trang 1
+    - const start = (pagination.page - 1) * limit + 1;
+    - const end = Math.min(pagination.page * limit, pagination.totalRecords);
+    span.inner-label Hiển thị #{start} - #{end} của #{pagination.totalRecords}
+
+    select.inner-pagination(pagination name="page")
+      each val in [...Array(pagination.totalPages).keys()]
+        - const pageNum = val + 1;
+        option(value=pageNum selected=(pageNum === pagination.page)) Trang #{pageNum}
+
 
