--- a/views/admin/pages/map-edit.pug
+++ b/views/admin/pages/map-edit.pug
@@ -1,16 +1,19 @@
 extends ../layouts/default.pug
-
+include ../mixins/optionTinh.pug
 block main
     h1.box-title Sửa bản đồ
   
     .section-8
       form#map-edit-form
         .inner-group.inner-two-col(style="display:none")
-          label(class="inner-label" for="matinh") Mã tỉnh
-          input(type="text" id="matinh" name="matinh" value=matinh) 
-        .inner-group.inner-two-col(style="display:none")
           label(class="inner-label" for="id") Mã id map
           input(type="text" id="id" name="id" value=dataMap.id)
+        .inner-group.inner-two-col
+          label(class="inner-label" for="tinh") Tỉnh
+          select(id="tinh" name="tinh" class="tinh")
+            option(value="") ---Chọn---
+            option(value=dataMap.ma_tinh selected) #{dataMap.ten_tinh}
+            +optionTinh(listTinh)
         .inner-group.inner-two-col
           label(class="inner-label" for="title") Thông tin
           input(type="text" id="title" name="title" value=dataMap.thongtin)  
@@ -36,4 +39,4 @@ block main
         .inner-button.inner-two-col
           button Cập nhập
       .inner-back
-        a(href=`/${pathAdmin}/map/${matinh}/list`) Quay lại danh sách
+        a(href=`/${pathAdmin}/map/list`) Quay lại danh sách
