--- a/views/admin/pages/weather-data-list.pug
+++ b/views/admin/pages/weather-data-list.pug
@@ -1,4 +1,7 @@
 extends ../layouts/default.pug
+include ../mixins/optionTinh.pug
+include ../mixins/optionHuyen.pug
+include ../mixins/optionXa.pug
 
 block main
   h1.box-title Dữ liệu thời tiết
@@ -8,12 +11,21 @@ block main
     .inner-wrap
       .inner-item.inner-label
         <i class="fa-solid fa-filter"></i> Bộ lọc
-      .inner-item
-        select(filter-status)
-          option(value="") Trạng thái
-          option(value="active") Hoạt động
-          option(value="inactive") Tạm dừng
-          
+        .inner-group
+          label(class="inner-label" for="tinh") Tỉnh
+          select(id="tinh" name="tinh" class="tinh" filter-Ma_tinh)
+            option(value="")
+            +optionTinh(ListTinh)
+        .inner-group
+          label(class="inner-label" for="huyen") Huyện
+          select(id="huyen" name="huyen" class="huyen" filter-Ma_huyen)
+            option(value="")
+            +optionHuyen(ListHuyen)
+        .inner-group
+          label(class="inner-label" for="xa" ) Xã
+          select(id="xa" name="xa" class="xa" filter-Ma_xa)
+            option(value="")
+            +optionXa(ListXaTheoHuyen)
       .inner-item.inner-date
         input(type="date" filter-start-date value="2025-09-01")
         span - 
@@ -28,9 +40,7 @@ block main
       table
         thead
           tr
-            th.inner-center
-              input(type="checkbox" class="inner-check" check-all)
-            th Tỉnh
+            th.inner-center Tỉnh
             th Huyện
             th Xã
             th Nhiệt độ TB (°C)
@@ -38,24 +48,28 @@ block main
             th Tốc độ gió TB (m/s)
             th Chỉ số k
             th Ngày cập nhật
-            th Hành động
+            th.inner-center Hành động
         tbody
-          each item, index in dataList
+          if dataList && dataList.length
+            each item, index in dataList
+              tr
+                td.inner-center #{item.ten_tinh || 'Không xác định'}
+                td #{item.ten_huyen || 'Không xác định'}
+                td #{item.ten_xa || 'Không xác định'}
+                td #{item.temp_mean}
+                td #{item.rain_mean}
+                td #{item.wind_mean}
+                td #{item.cap_so_p}
+                td #{item.ngay_cap_nhat}
+                td.inner-center
+                  .inner-buttons
+                    a.inner-edit(href=`/admin/weather-data/detail/${item.id}`)
+                      <i class="fa-solid fa-eye"></i>
+                    a.inner-edit(href=`/${pathAdmin}/weather-data/edit/${item.id}`)
+                        i(class="fa-regular fa-pen-to-square")
+          else 
             tr
-              td.inner-center
-                input(type="checkbox" class="inner-check" check-item=item.id)
-              td #{item.ten_tinh || 'Không xác định'}
-              td #{item.ten_huyen || 'Không xác định'}
-              td #{item.ten_xa || 'Không xác định'}
-              td #{item.temp_mean}
-              td #{item.rain_mean}
-              td #{item.wind_mean}
-              td #{item.cap_so_p}
-              td #{item.ngay_cap_nhat}
-              td
-                .inner-buttons
-                  a.inner-edit(href=`/admin/weather-data/detail/${item.id}`)
-                    <i class="fa-solid fa-eye"></i>
+              td(colspan="11" style="text-align:center; padding:10px;") Không có dữ liệu
 
   //- Section 7: Pagination
   .section-7
